# YOLO_V1

./: .gitignore  2019_train.txt  2019_val.txt  CMakeLists.txt  DARKNET_YOLOV1  README.md  build.sh  config.yml  libDarknet.cc  libDarknet.hpp  log.cc  log.h  main.cc  predict.sh  predict_v3.sh  train.sh  train.txt  train_v3.sh
cfg/: agv.data  yolo-small.cfg  yolo-small_1cls.cfg  yolov3-voc.cfg  yolov3.cfg
examples/: detector.c  yolo.c
log/: DARKNET_YOLOV1.INFO  darknet_lib_info_20210726-165716.24263
param/: class.name  imgfile.list
scripts/: voc_label.py  xml2txt.py
src/: activation_layer.c  batchnorm_layer.c  connected_layer.c  cost_layer.c  crnn_layer.c  crop_layer.c  deconvolutional_layer.c  detection_layer.c  dropout_layer.c  gru_layer.c  image.c  iseg_layer.c  local_layer.c  lstm_layer.c  network.c  normalization_layer.c  parser.c  reorg_layer.c  rnn_layer.c  shortcut_layer.c
